Issue-467 Flextesa support initial commit

--- a/example/package.json
+++ b/example/package.json
@@ -15,7 +15,9 @@
     "example:streamer-custom": "node -r ts-node/register --preserve-symlinks example-streamer-custom-retry-logic.ts",
     "example:scan-path-ledger": "node -r ts-node/register --preserve-symlinks scan-path-ledger.ts",
     "example:rpc-vs-local-pack-sequential": "node -r ts-node/register --preserve-symlinks example-sequential-bigmap-local-vs-rpc-pack.ts",
-    "example:rpc-vs-local-pack-parallel": "node -r ts-node/register --preserve-symlinks example-parallel-bigmap-local-vs-rpc-pack.ts"
+    "example:rpc-vs-local-pack-parallel": "node -r ts-node/register --preserve-symlinks example-parallel-bigmap-local-vs-rpc-pack.ts",
+    "deploy:contracts": "node -r ts-node/register --preserve-symlinks deploy-integration-tests-contracts.ts",
+    "deploy:lambda-contracts": "node -r ts-node/register --preserve-symlinks deploy-lambda-contract.ts"
   },
   "dependencies": {
     "@ledgerhq/hw-transport-node-hid": "^5.43.0",
